--- a/Index.html
+++ b/Index.html
@@ -3,35 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inspección Digital - Siniestros</title>
+    <title>Inspector Digital - Sistema de Siniestros</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Inspección Digital</h1>
-            <p>Registro de Siniestro (Incendio/Sismo)</p>
+    <!-- MENÚ LATERAL MÓVIL -->
+    <div class="sidebar-overlay" id="sidebarOverlay"></div>
+    <nav class="sidebar" id="sidebar">
+        <div class="sidebar-header">
+            <h2>Menú</h2>
+            <button class="close-menu" id="closeMenu">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <ul class="sidebar-menu">
+            <li><a href="pages/paso1.html"><i class="fas fa-lock"></i> Acceso</a></li>
+            <li><a href="pages/paso2.html"><i class="fas fa-edit"></i> Captura de Datos</a></li>
+            <li><a href="pages/paso3.html"><i class="fas fa-check"></i> Finalizar</a></li>
+            <li><hr></li>
+            <li><a href="pages/about.html"><i class="fas fa-info-circle"></i> Sobre la Aplicación</a></li>
+            <li><a href="pages/config.html"><i class="fas fa-cog"></i> Configuración</a></li>
+            <li><a href="pages/help.html"><i class="fas fa-question-circle"></i> Ayuda</a></li>
+        </ul>
+    </nav>
+
+    <div class="app-container">
+        <header class="app-header">
+            <div class="header-top">
+                <button class="menu-toggle" id="menuToggle">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <h1>INSPECCIÓN DIGITAL ASTIDA</h1>
+                <div class="header-space"></div>
+            </div>
         </header>
 
-        <form id="inspectionForm">
-            <label for="asegurado_id">ID Asegurado:</label>
-            <input type="number" id="asegurado_id" placeholder="Ej: 12345" required>
+        <div class="app-main">
+            <div class="welcome-section">
+                <div class="welcome-icon">
+                    <i class="fas fa-check-circle"></i>
+                </div>
+                <h2>Bienvenido a Inspector Digital</h2>
+                <p>Sistema integral de gestión de siniestros</p>
+                
+                <div class="quick-access">
+                    <a href="pages/paso1.html" class="quick-btn">
+                        <i class="fas fa-lock"></i>
+                        <span>Nueva Inspección</span>
+                    </a>
+                    <a href="pages/help.html" class="quick-btn secondary">
+                        <i class="fas fa-question-circle"></i>
+                        <span>Ver Ayuda</span>
+                    </a>
+                </div>
 
-            <label for="tipo_siniestro">Tipo de Siniestro:</label>
-            <select id="tipo_siniestro" required>
-                <option value="">Seleccione...</option>
-                <option value="Incendio">Incendio</option>
-                <option value="Sismo">Sismo</option>
-            </select>
-
-            <label for="descripcion">Descripción de Daños:</label>
-            <textarea id="descripcion" rows="4" placeholder="Describa brevemente lo ocurrido..." required></textarea>
-
-            <button type="submit" id="btnEnviar">Enviar Inspección</button>
-        </form>
-        <div id="mensaje"></div>
+                <div class="info-box">
+                    <h3><i class="fas fa-lightbulb"></i> Consejo</h3>
+                    <p>Usa el menú para acceder a todas las funciones. Puedes navegar entre la captura de datos en cualquier momento.</p>
+                </div>
+            </div>
+        </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="public/script.js"></script>
 </body>
 </html>
