--- a/Index.html
+++ b/Index.html
@@ -35,7 +35,14 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <h1>INSPECCIÓN DIGITAL ASTIDA</h1>
-                <div class="header-space"></div>
+                <div class="header-space">
+                    <div class="user-menu" id="userMenu" style="display: none;">
+                        <span class="user-name" id="userName"></span>
+                        <button class="btn-logout" id="btnLogout">
+                            <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
+                        </button>
+                    </div>
+                </div>
             </div>
         </header>
 
